--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 .navigation
 {
-	background-image: url(../images/Moonrise.jpg);
+	background-image: url(../images/bg.png);
 }
 p, .paragraph {
   font-weight: 400;
